Fix alignment for p within label
Screenshot working: https://cl.ly/5f695ca8474b

--- a/src/resources/postcss/tribe-common-admin.pcss
+++ b/src/resources/postcss/tribe-common-admin.pcss
@@ -134,6 +134,9 @@ table.plugins .tribe-plugin-update-message a {
 	display: block;
 	margin: 5px 0 5px 20px;
 	text-indent: -20px;
+	> p {
+		text-indent: 0;
+	}
 }
 .tribe-settings-form .tribe-field-radio label input,
 .tribe-settings-form .tribe-field-checkbox_list label input {
